# HoneyJam

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
honeyjam/: __init__.py  cli.py  models.py
honeyjam/analysis/: __init__.py  heuristics.py  malware_detector.py  signatures.yaml  timeline.py
honeyjam/export/: __init__.py  ecs.py  report.py
honeyjam/export/templates/: report.html.j2
honeyjam/parser/: __init__.py  hive.py  util.py
honeyjam/plugins/: __init__.py  _regipy_backed.py  accounts.py  amcache.py  bam.py  build_info.py  devices.py  environment.py  installed_programs.py  mru.py  network.py  persistence.py  rdp.py  services.py  shellbags.py  shimcache.py  system_info.py  typed_history.py  usbstor.py  userassist.py
tests/: conftest.py  test_analysis_export.py  test_heuristics.py  test_new_plugins.py  test_plugins.py
