[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "honeyjam"
version = "0.2.0"
description = "HoneyJam - Windows Registry forensics toolkit (spiritual successor to RegRipper)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "sltcnb" }]
keywords = ["dfir", "forensics", "registry", "windows", "regripper", "regipy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "regipy>=4",
    "click>=8",
    "rich>=13",
    "pydantic>=2",
    "jinja2>=3",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
]

[project.scripts]
honeyjam = "honeyjam.cli:main"

[project.urls]
Homepage = "https://github.com/sltcnb/honeyjam"
Repository = "https://github.com/sltcnb/honeyjam"

[tool.setuptools.packages.find]
include = ["honeyjam*"]

[tool.setuptools.package-data]
honeyjam = ["analysis/*.yaml", "export/templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
